[package]
name = "ucan-playground"
version = "0.1.0"
edition = "2024"

[dependencies]
yew = { version = "0.21.0", features = ["csr"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4.50"
js-sys = "0.3.77"
web-sys = { version = "0.3", features = ["HtmlInputElement"] }
async-trait = "0.1.88"
anyhow = "1.0.98"
chrono = { version = "0.4.40", features = ["serde"] }
url = "2.5.4"
ed25519-dalek = { version = "2.1.1", features = ["std", "rand_core", "serde"] }
rand = "0.8.5"
tracing = "0.1.41"
tracing-wasm = "0.2.1"
base64 = "0.22.1"
regex = "1.11.1"
futures = "0.3.31"
ucan = { version = "0.4.0", default-features = false }
gloo-timers = { version = "0.3", features = ["futures"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
reqwest = { version = "0.12.15", features = ["json"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
reqwest = { version = "0.12.15", features = ["json"] }
tokio = { version = "1.44.2", features = ["full"] }
mio = "1.0.3"

[dev-dependencies]
wasm-bindgen-test = "0.3.50"